--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -404,9 +404,9 @@ embassy:
             🎶 Список доступных звуков 
             {{sounds}}
         fail: ⚠️ Не получилось найти доступные звуки
-    knock:
-        knock: |
-            📢 Тук-тук {{residentsInside}}
+    hey:
+        text: |
+            📢 Эй, {{residentsInside}}
         noresidents: 🛏 A внутри резиденты не отмечались
     neural:
         sd:
@@ -566,6 +566,11 @@ service:
         error: ⚠️ Что-то пошло не так, наверное слишком долго отвечает
     removebuttons:
         error: ⚠️ Не получилось убрать кнопки
+    deprecated:
+        notsupported: | 
+            🚫 Команда #`{{command}}#` устарела и больше не поддерживается
+        replaced: |
+            🔄 Вместо нее используй #`{{replacement}}#`
 status:
     buttons:
         in: 🤝 Я в спейсе
@@ -591,6 +596,7 @@ status:
             💵 Были сделаны следующие донаты:
             {{donationList}}
         total: 💰 Всего задоначено в спейс {{total}} {{currency}}
+        notfound: ⚠️ Юзер не найден
     mac:
         help: |
             📡 С помощью этой команды можно задать MAC адреса для функций автовхода и управления замком 
@@ -637,7 +643,7 @@ status:
 
             {{statusMessage}}
         messageopened: Отличный повод зайти, так что звоните в звонок или пишите находящимся внутри - вам откроют
-        messageclosed: Ждем, пока кто-то из резидентов его откроет. Может внутри никого нет, или происходит закрытое собрание резидентов, или они опять забыли сделать /open? Who knows... Лучше спроси у них в чате или тегни их командой /knock.
+        messageclosed: Ждем, пока кто-то из резидентов его откроет. Может внутри происходит закрытое собрание резидентов, или они опять забыли сделать /open? Who knows... Лучше спроси у них в чате или тегни их командой /hey если они забыли про чат.
         updated: ⏱ Обновлено {{updatedDate}}
         opened: "#*открыт#*"
         closed: "#*закрыт#*"
@@ -701,8 +707,14 @@ status:
         nousertimes: "📭 За этот период отметки не найдены"
         hoursinspace: "Часов проведено в спейсе c {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}}"
         period: "🕔 C {{from.day}}/{{from.month}}/{{from.year}} по {{to.day}}/{{to.month}}/{{to.year}} эти юзеры провели в спейсе (на основе отметок)"
-        tryautoinside: "📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически"
-        help: "ℹ️ Также можно получить статистику за текущий месяц /month, предыдущий месяц /lastmonth, и за любой период #`/stats from 2023-05-01 to 2023-05-25#`"
+        tryautoinside: |
+            📲 Хочешь знать точную статистику о себе? Не забывай отмечаться с помощью /in и /out, а лучше используй /autoinside, чтобы делать это автоматически
+        help: |
+            ℹ️ Команды статистики:
+            • Текущий месяц - /month
+            • Предыдущий месяц - /lastmonth
+            • За время существования бота - /allstats
+            • Любой период - #`/stats from 2023-05-01 to 2023-05-25#`
 meme:
     its_wednesday: 🐸 Ква-ква, а сегодня среда! Шанс получить от меня /zhabka сегодня высок как никогда (даже там, где они обычно не водятся)!
     not_wednesday: 🐸 Ой, а сегодня жабки спят. Возвращайся в среду!
