--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -724,6 +724,12 @@ meme:
         help: |
             🖐 С помощью этой команды можно slap кого-нибудь
             #`/slap username#`
+    hug:
+        user: |
+            🫂 {{from}} заботливо обнимает {{target}}
+        help: |
+            🫂 С помощью этой команды можно обнять кого-нибудь
+            #`/hug username#`
 topics:
     general:
         error: ⚠️ Что-то пошло не так
