--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -598,6 +598,10 @@ status:
         total: 💰 Всего задоначено в спейс {{total}} {{currency}}
         notfound: ⚠️ Юзер не найден
     mac:
+        buttons:
+            detect: 🔍 Определить автоматически
+            autoinside: 📲 Включить автовход
+            remove: 🗑 Удалить MAC
         help: |
             📡 С помощью этой команды можно задать MAC адреса для функций автовхода и управления замком 
 
@@ -615,16 +619,17 @@ status:
         isset: 📲 Для юзера {{username}} заданы MAC адреса {{usermac}}
         isnotset: 📲 MAC адрес не задан для юзера {{username}}
     autoinside:
+        buttons:
+            status: 👁‍🗨 Статус
+            enable: 📲 Включить
+            disable: 📵 Выключить
+            mac: 📡 Управление MAC
+            ghost: 👻 Ghost
         help: |
             ⏲ С помощью этой команды можно автоматически отмечаться в спейсе как только MAC адрес вашего устройства будет обнаружен в сети.
             📌 При отсутствии активности устройства в сети спейса в течение {{timeout}} минут произойдет автовыход юзера.
             📌 При включенной фиче актуальный статус устройства в сети имеет приоритет над ручными командами входа/выхода.
             ⚠️ Для работы обязательно задайте MAC адреса вашего устройства и отключите его рандомизацию для сети спейса.
-                  
-            #`/setmac#` - Управление своим MAC адресом  
-            #`/autoinside status#` - Статус автовхода и автовыхода
-            #`/autoinside enable#` - Включить автовход и автовыход  
-            #`/autoinside disable#` - Выключить автовход и автовыход
         ghost: "#`/autoinside ghost#` - Отмечаться только для резидентов"
         fail: ⚠️ Не удалось включить автовход, хотя MAC задан. Кто-нибудь, накостыляйте моему разработчику.
         nomac: |
