--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -392,6 +392,12 @@ embassy:
             🗣 С помощью этой команды можно отправить текст на лед матрицу спейса, например #`/text Привет, хакеры#`
         success: 🗣 Сообщение отправлено на матрицу
         fail: ⚠️ Не получилось отправить сообщение
+    html:
+        help: |
+            🗣 С помощью этой команды можно отправить текст на монитор внутри спейса, например #`/html <h1>Привет, хакеры</h1>#`
+            Для очистки монитора используй #`/html clear#`
+        success: 🗣 HTML отправлен на монитор
+        fail: ⚠️ Не получилось отправить html
     play:
         help: 🗣 С помощью этой команды можно воспроизвести любой звук по ссылке
         success: 🗣 Звук отправлен на динамик
