--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -394,10 +394,14 @@ embassy:
         fail: ⚠️ Не получилось отправить сообщение
     html:
         help: |
-            🗣 С помощью этой команды можно отправить текст на монитор внутри спейса, например #`/html <h1>Привет, хакеры</h1>#`
+            🗣 С помощью этой команды можно отправить контент на монитор внутри спейса, например #`/html <h1>Привет, хакеры</h1>#`
             Для очистки монитора используй #`/html clear#`
-        success: 🗣 HTML отправлен на монитор
-        fail: ⚠️ Не получилось отправить html
+        success: 🗣 Отправлено на монитор
+        fail: ⚠️ Не получилось отправить
+    gif:
+        help: |
+            🗣 С помощью этой команды можно отправить гифку на монитор внутри спейса, например #`/gif https://c.tenor.com/WsPxFXB9CkUAAAAC/tenor.gif#`
+            Для очистки монитора используй #`/gif clear#`
     play:
         help: 🗣 С помощью этой команды можно воспроизвести любой звук по ссылке
         success: 🗣 Звук отправлен на динамик
@@ -573,7 +577,7 @@ service:
     removebuttons:
         error: ⚠️ Не получилось убрать кнопки
     deprecated:
-        notsupported: | 
+        notsupported: |
             🚫 Команда #`{{command}}#` устарела и больше не поддерживается
         replaced: |
             🔄 Вместо нее используй #`{{replacement}}#`
@@ -695,7 +699,7 @@ status:
         gotout: 🔴 {{memberusername}} отправил(а) домой {{username}}.
     going: 🚕 {{username}} планирует сегодня зайти в спейс {{note}}
     notgoing: 🛌 {{username}} больше не планирует сегодня в спейс.
-    shouldigo: 
+    shouldigo:
         context: "Ты телеграм бот хакспейса, отвечаешь всегда  смешно странно. В закрытый спейс советуй не ходить, а в открытый с радостью примут. Упоминай гостей внутри и планирующих если они есть."
         prompt: "Стоит ли мне идти в хакерспейс сегодня если спейс {{state}} для меня, планируют зайти {{going}} а внутри {{inside}}?"
         fail: "Не могу понять, стоит ли тебе идти в спейс сегодня. Попробуй еще раз"
