--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -483,8 +483,10 @@ funds:
         fail: ⚠️ Не удалось передать донат
         nothing: ⚠️ Ничего не передано, пипец
     adddonation:
-        success: 💸 Новый донейт от {{username}} – {{value}} {{currency}} в сбор {{fundName}}
-        increased: 💸 Донейт от {{username}} в сбор {{fundName}} стал больше на {{value}} {{currency}}
+        success: |
+            💸 [#`{{donationId}}#`] Новый донейт от {{username}} – {{value}} {{currency}} в сбор #`{{fundName}}#`
+        increased: | 
+            💸 [#`{{donationId}}#`] Донейт от {{username}} в сбор #`{{fundName}}#` стал больше на {{value}} {{currency}}
         fail: ⚠️ Не удалось добавить донат (может с валютой или суммой что-то не так?)
     removedonation:
         success: 🗑 Удален донат [id:{{donationId}}]
