Added sponsorships support

--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -484,10 +484,12 @@ funds:
         nothing: ⚠️ Ничего не передано, пипец
     adddonation:
         success: |
-            💸 [#`{{donationId}}#`] Новый донейт от {{username}} – {{value}} {{currency}} в сбор #`{{fundName}}#`
+            💸 [#`{{donationId}}#`] Новый донейт от {{username}} - {{value}} {{currency}} в сбор #`{{fundName}}#`
         increased: | 
             💸 [#`{{donationId}}#`] Донейт от {{username}} в сбор #`{{fundName}}#` стал больше на {{value}} {{currency}}
         fail: ⚠️ Не удалось добавить донат (может с валютой или суммой что-то не так?)
+        sponsorship: |
+            {{emoji}} {{username}} теперь наш {{sponsorship}} спонсор
     removedonation:
         success: 🗑 Удален донат [id:{{donationId}}]
         fail: ⚠️ Не удалось удалить донат (может его и не было?)
@@ -501,6 +503,14 @@ funds:
     residentshistory:
         fail: ⚠️ Не удалось сгенерировать график донатов
         empty: ⚠️ Не найдено донатов за этот период
+    sponsors:
+        list: |
+            🏅 Наши почетные спонсоры 🏅
+            
+            {{list}}
+    refreshsponsorships:
+        success: 🔄 Спонсорства обновлены
+        fail: ⚠️ Не удалось обновить спонсорства
     export:
         empty: ⚠️ Нечего экспортировать
         fail: ⚠️ Что-то не так
