--- a/resources/locales/en/translation.yaml
+++ b/resources/locales/en/translation.yaml
@@ -488,6 +488,8 @@ funds:
         increased: |
             💸 [#`{{donationId}}#`] {{username}} increased his donation to #`{{fundName}}#` by another {{value}} {{currency}}
         fail: ⚠️ Failed to add donation (maybe something is wrong with the currency or amount?)
+        sponsorship: |
+            {{emoji}} {{username}} now has {{sponsorship}} level
     removedonation:
         success: 🗑 Donation removed [id:{{donationId}}]
         fail: ⚠️ Failed to delete the donation (maybe it didn’t exist?)
@@ -501,6 +503,14 @@ funds:
     residentshistory:
         fail: ⚠️ Failed to generate donation schedule
         empty: ⚠️ No donations found for this period
+    sponsors:
+        list: |
+            🏅 Our beloved sponsors 🏅 
+            
+            {{list}}
+    refreshsponsorships:
+        success: 🔄 Sponsorships updated
+        fail: ⚠️ Failed to update sponsorships
     export:
         empty: ⚠️ Nothing to export
         fail: ⚠️ Something is wrong
