--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -489,7 +489,7 @@ funds:
             💸 [#`{{donationId}}#`] Донейт от {{username}} в сбор #`{{fundName}}#` стал больше на {{value}} {{currency}}
         fail: ⚠️ Не удалось добавить донат (может с валютой или суммой что-то не так?)
         sponsorship: |
-            {{emoji}} {{username}} теперь наш {{sponsorship}} спонсор
+            {{emoji}} {{username}} теперь наш {{tiername}} спонсор
     removedonation:
         success: 🗑 Удален донат [id:{{donationId}}]
         fail: ⚠️ Не удалось удалить донат (может его и не было?)
