--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -71,6 +71,9 @@ basic:
         Мы вносим свой вклад в развитие спейса: оплата аренды и коммуналки, забота о пространстве, помощь в приобретении оборудования.
         Мы будем рады любой поддержке. 
 
+        🫶 Начиная с определенной суммы донатов за последние {{period}} месяца вы получаете статус нашего спонсора:
+        {{sponsorshipTierList}}
+
         Задонатить нам можно следующими способами:
         💵 Наличкой при встрече (самый лучший вариант)
           {{donateCashCommand}}
@@ -206,6 +209,7 @@ basic:
             location: 🗺 Как найти
             donate: 🎁 Как задонатить
             residents: 👩‍💻 Наши резиденты
+            sponsors: 🫶 Наши спонсоры
             back: ↩️ Назад
     meme:
         text: |
@@ -508,6 +512,8 @@ funds:
             🏅 Наши почетные спонсоры 🏅
             
             {{list}}
+
+            🫶 Хочешь тоже попасть в список наших спонсоров? Жми Как задонатить ниже
     refreshsponsorships:
         success: 🔄 Спонсорства обновлены
         fail: ⚠️ Не удалось обновить спонсорства
