--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -482,9 +482,9 @@ funds:
         fail: ⚠️ Не удалось изменить статус сбора
     transferdonation:
         success: |
-            ↪️ Донат [id:{{id}}] передан {{accountant}}
-            Был донейт от {{username}} в сбор {{fund.name}} в размере {{donation.value}} {{donation.currency}}
-        fail: ⚠️ Не удалось передать донат
+            ↪️ Донат [#`{{id}}#`] передан {{accountant}}
+            Был донейт от {{username}} в сбор #`{{fund.name}}#` в размере {{donation.value}} {{donation.currency}}
+        fail: ⚠️ Не удалось передать донат [#`{{id}}#`]
         nothing: ⚠️ Ничего не передано, пипец
     adddonation:
         success: |
@@ -528,10 +528,10 @@ funds:
             💰 Всего {{total}} {{currency}} деняк
 
             🛂 Передать донат можно командами:
+            #`/tosafe id#` - Отдельный донат Сейфу по id (можно несколько id через запятую)
+            #`/topaid id#` - Отметить донат оплаченным по id (ушел на цель сбора)
             #`/tocab id#` - Отдельный донат Кабу по id
             #`/tonick id#` - Отдельный донат Коле по id
-            #`/tosafe id#` - Отдельный донат Сейфу по id
-            #`/topaid id#` - Отметить донат оплаченным по id (ушел на цель сбора)
             #`/tosafeall fund_name#` - Все донаты в сейф с определенного сбора
             #`/transferdonation donation_id to username#` (td) - Передать донат другому бухгалтеру
         empty: 📂 На тебе ничего не числится
