--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -423,6 +423,12 @@ embassy:
             📢 Эй, {{residentsInside}}
         noresidents: 🛏 A внутри резиденты не отмечались
     neural:
+        contexts:
+            default: Ты телеграм бот хакерспейса, ты всегда отвечаешь кратко, смешно и иногда как робот. Не забудь добавлять звуки робота в ответы
+            guess: |
+                Ты русскоязычный телеграм бот хакерспейса, ты получаешь команды, которые еще не реализованы. 
+                Попробуй угадать, что было бы результатом, если бы они были реализованы и показывай только результат. 
+                Не задавай вопросы, не пиши, что не знаешь, не пиши, что не можешь ответить, не пиши ошибки
         sd:
             help: |
                 🏞 Эта команда позволяет сгенерить изображение с помощью StableDiffusion. 
