--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -605,6 +605,26 @@ service:
             🚫 Команда #`{{command}}#` устарела и больше не поддерживается
         replaced: |
             🔄 Вместо нее используй #`{{replacement}}#`
+    token:
+        help: |
+            🤖 С помощью этой команды можно управлять токеном для доступа к API (пока одним)
+
+            #`/token set#` - Установить новый токен
+            #`/token remove#` - Удалить токен
+            #`/token help#` - Посмотреть это сообщение
+        found: 🛂 У вас установлен токен
+        notfound: 📴 Токен не установлен
+        set: |
+            ✅ Токен добавлен, сохраните его, потому что больше он вам не покажется:
+            #`{{token}}#`
+        removed: |
+            🗑 Токен удален, установить новый можно командой
+            #`/token set#`
+        exists: |
+            ⚠️ У вас уже есть токен, удалите его перед установкой нового с помощью
+            #`/token remove#`
+        missing: ⚠️ Установленный токен не найден
+        private: ⚠️ Эта команда доступна только в личке
 status:
     buttons:
         in: 🤝 Я в спейсе
