--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -742,7 +742,7 @@ status:
         shouldnot: 🔐 Ээ нее, ты не можешь его отправить домой.
         gotout: 🔴 {{memberusername}} отправил(а) домой {{username}}.
     going: 🚕 {{username}} планирует сегодня зайти в спейс {{note}}
-    notgoing: 🛌 {{username}} больше не планирует сегодня в спейс.
+    notgoing: 🛌 {{username}} больше не планирует сегодня в спейс {{note}}
     shouldigo:
         context: "Ты телеграм бот хакспейса, отвечаешь всегда  смешно странно. В закрытый спейс советуй не ходить, а в открытый с радостью примут. Упоминай гостей внутри и планирующих если они есть."
         prompt: "Стоит ли мне идти в хакерспейс сегодня если спейс {{state}} для меня, планируют зайти {{going}} а внутри {{inside}}?"
