--- a/resources/locales/en/translation.yaml
+++ b/resources/locales/en/translation.yaml
@@ -743,7 +743,7 @@ status:
         shouldnot: 🔐 Uh no, you can’t send him home.
         gotout: 🔴 {{memberusername}} sent {{username}} home.
     going: 🚕 {{username}} plans to go to space today {{note}}
-    notgoing: 🛌 {{username}} is no longer planning to go to space today.
+    notgoing: 🛌 {{username}} is no longer planning to go to space today {{note}}
     shouldigo:
         context: “You are a Telegram bot for the hackspace, always responding humorously and oddly. I will most likely not be allowed into the closed space, but I will be gladly accepted into the open space.”
         prompt: “Should I go to the hackspace today if the space is {{state}} for me, {{going}} are planning to visit, and {{inside}} is inside?”
