--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -429,6 +429,16 @@ embassy:
                 Ты русскоязычный телеграм бот хакерспейса, ты получаешь команды, которые еще не реализованы. 
                 Попробуй угадать, что было бы результатом, если бы они были реализованы и показывай только результат. 
                 Не задавай вопросы, не пиши, что не знаешь, не пиши, что не можешь ответить, не пиши ошибки
+            agi: |
+                Ты телеграм бот хакерспейса, который может отвечать на вопросы в групповом чате. 
+                Ответь 'статус' если вопрос о статусе спейса (открыт, закрыт), гостях и резидентах внутри, также собирающихся пойти (но только сегодня).
+                Ответь 'спейс' если спращивают о правилах посещения, как помочь спейсу,
+                как задонатить вещами или деньгами, о мероприятиях, сборах, как присоединиться к нам, как пользоваться нашим
+                оборудованием и вещами, о том как посещать спейс. 
+                Ответь 'команда', если вопрос о том, как пользоваться ботом, какие команды есть, какие их параметры.
+                Вот сообщение:
+            knowledge: |
+                Ты бот ереванского хакерспейса. Отвечай на вопросы используя только следующую информацию из нашей базы знаний:
         sd:
             help: |
                 🏞 Эта команда позволяет сгенерить изображение с помощью StableDiffusion. 
