--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -495,7 +495,7 @@ funds:
     adddonation:
         success: |
             💸 [#`{{donationId}}#`] Новый донейт от {{username}} - {{value}} {{currency}} в сбор #`{{fundName}}#`
-        increased: | 
+        increased: |
             💸 [#`{{donationId}}#`] Донейт от {{username}} в сбор #`{{fundName}}#` стал больше на {{value}} {{currency}}
         fail: ⚠️ Не удалось добавить донат (может с валютой или суммой что-то не так?)
         sponsorship: |
@@ -516,7 +516,7 @@ funds:
     sponsors:
         list: |
             🏅 Наши почетные спонсоры 🏅
-            
+
             {{list}}
 
             🫶 Хочешь тоже попасть в список наших спонсоров? Жми Как задонатить ниже
@@ -657,21 +657,21 @@ status:
             autoinside: 📲 Включить автовход
             remove: 🗑 Удалить MAC
         help: |
-            📡 С помощью этой команды можно задать MAC адреса для функций автовхода и управления замком 
+            📡 С помощью этой команды можно задать MAC адреса для функций автовхода и управления замком
+            🪪 Адреса юзера: {{usermacs}}
 
-            #`/setmac mac_address#` - Установить свой MAC адрес (или несколько, через запятую)
-            #`/setmac status#` - Посмотреть свой установленный в боте MAC адрес
-            #`/setmac remove#` - Удалить свои MAC адреса из бота
+            #`/mac add mac_address#` - Добавить свой MAC адрес
+            #`/mac remove mac_address#` - Удалить свой MAC адрес
+            #`/mac clear#` - Удалить свои MAC адреса из бота
         fail: |
-            ⚠️ Не получилось добавить такой MAC. Может он невалидный?
+            ⚠️ Не получилось обработать такой MAC. Может он невалидный или уже занят?
             Примеры правильного задания адресов:
-            #`/setmac xx:xx:xx:xx:xx:xx#`
-            #`/setmac xx:xx:xx:xx:xx:xx, xx:xx:xx:xx:xx:xx#`
-        set: 📡 MAC адреса {{cmd}} успешно установлены для юзера {{username}}.
-        removed: |
+            #`/mac add xx:xx:xx:xx:xx:xx#`
+            #`/mac remove xx:xx:xx:xx:xx:xx#`
+        set: 📡 MAC адрес {{mac}} успешно установлен для юзера {{username}}.
+        removed: 🗑 MAC адрес {{mac}} удален для юзера {{username}}
+        cleared: |
             🗑 MAC адреса удалены для юзера {{username}}. Автовход теперь работать не будет.
-        isset: 📲 Для юзера {{username}} заданы MAC адреса {{usermac}}
-        isnotset: 📲 MAC адрес не задан для юзера {{username}}
     autoinside:
         buttons:
             status: 👁‍🗨 Статус
@@ -687,7 +687,7 @@ status:
         ghost: "#`/autoinside ghost#` - Отмечаться только для резидентов"
         fail: ⚠️ Не удалось включить автовход, хотя MAC задан. Кто-нибудь, накостыляйте моему разработчику.
         nomac: |
-            ⚠️ Твой MAC адрес не задан. Добавь его командой /setmac
+            ⚠️ Твой MAC адрес не задан. Добавь его командой /mac
         set: 🕺 Автовход и автовыход активированы для юзера {{username}} на MAC адрес {{usermac}}
         removed: 🚷 Автовход и автовыход выключены для юзера {{username}}
         isset: 🕺 Автовход и автовыход включены для юзера {{username}} на MAC адрес {{usermac}}
