--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -65,7 +65,7 @@ basic:
         🧠 Вы можете обратиться к ним по любому спейсовскому вопросу
     location:
         address: |
-            🏫 Вот этот домик, единственный в своем роде. Его адрес: Армения, Ереван, Пушкина 38/18 (вход со двора)
+            🏫 Наш адрес: Армения, Ереван, проспект Баграмяна 60 (вход с улицы)
     donate: |
         💸 Хакспейс не является коммерческим проектом и существует исключительно на пожертвования участников.
         Мы вносим свой вклад в развитие спейса: оплата аренды и коммуналки, забота о пространстве, помощь в приобретении оборудования.
@@ -443,12 +443,12 @@ embassy:
                 Управление машиной в команде /gaming
             fail: ⚠️ Не получилось сгенерировать изображение, а /gaming точно включен и еще не сдох от тонны запросов?
     ena:
-        street: Пушкина
+        street: Баграмяна
         mentioned: |
-            ⚡️ Опа, Улица {{street}} ({{hystreet}}) была упомянута на сайте электросетей Армении https://www.ena.am/Info.aspx?id=5&lang=1
+            ⚡️ Опа, {{street}} ({{hystreet}}) упомянули на сайте электросетей Армении {{link}}
             Надеюсь, что это не в Ереване 😅
         notmentioned: |
-            ⚡️ Улица {{street}} ({{hystreet}}) больше не упоминается на сайте электросетей Армении. Все в порядке 👌
+            ⚡️ {{street}} ({{hystreet}}) больше не упоминается на сайте электросетей Армении. Все в порядке 👌
         fail: ⚠️ Не удалось проверить улицу
 funds:
     funds: |
