--- a/resources/locales/ru/translation.yaml
+++ b/resources/locales/ru/translation.yaml
@@ -248,7 +248,7 @@ admin:
         fail: ⚠️ Не удалось обновить роли
     removeUser:
         success: 🗑 Удалил {{username}}
-        fail: ⚠️ Не удалось удалить пользователя (может не нашли?)
+        fail: ⚠️ Не удалось удалить пользователя (может, такого и нет вовсе?)
     messages:
         restricted: "📵 Сорян, нужно быть {{required}} для выполнения этой команды"
 birthday:
@@ -321,7 +321,9 @@ embassy:
             /preheat - Подогреть спейс заранее (midea only)
         success: ✅ Получилось
         fail: ⚠️ Не вышло
-        unavailable: ⚠️ Кондей недоступен
+        unavailable: |
+            ⚠️ Кондей недоступен
+            ⚠️ В связи с переездом данная команда скоро будет заменена
         buttons:
             turnon: 🌀 Включить
             turnoff: ⛔️ Выключить
@@ -364,7 +366,7 @@ embassy:
             🔥 Температура стола {{heater_bed.temperature}}ºC, целевая {{heater_bed.target}}ºC
         update: Обновить статус {{printername}}
         fail: ⚠️ Принтер пока недоступен
-        undefinedtime: Хз
+        undefinedtime: NaN
     doorbell:
         success: 🔔 Звоним в дверной звонок
         fail: 🔕 Не получилось позвонить
@@ -449,7 +451,7 @@ embassy:
             Надеюсь, что это не в Ереване 😅
         notmentioned: |
             ⚡️ {{street}} ({{hystreet}}) больше не упоминается на сайте электросетей Армении. Все в порядке 👌
-        fail: ⚠️ Не удалось проверить улицу
+        fail: ⚠️ Не удалось проверить сайт электросетей Армении. Возможно, в датацентре выключили свет.
 funds:
     funds: |
         💰 Вот наши текущие сборы:
@@ -678,7 +680,7 @@ status:
             enable: 📲 Включить
             disable: 📵 Выключить
             mac: 📡 Управление MAC
-            ghost: 👻 Ghost
+            ghost: 👻 Режим невидимки
         help: |
             ⏲ С помощью этой команды можно автоматически отмечаться в спейсе как только MAC адрес вашего устройства будет обнаружен в сети.
             📌 При отсутствии активности устройства в сети спейса в течение {{timeout}} минут произойдет автовыход юзера.
