bugfix and some more changes

--- a/resources/locales/test/translation.yaml
+++ b/resources/locales/test/translation.yaml
@@ -1,3 +1,8 @@
+funds:
+  funds: funds.funds{{list}}
 status:
   in:
+      notready: 🔐 Сейчас спейс не готов принять гостей... или резиденты опять забыли сделать /open
       gotin: 🎉 Ого, {{username}} теперь в спейсе!
+      until: " до {{until}}"
+      tryautoinside: 👍 Похоже, ты уже пользуешься /autoinside для автовхода.
